# Autonomus-Lifter-Robot-System

./: .gitignore  CMakeLists.txt  README.md  package.xml  puzzlebot_setup.md  setup.cfg  setup.py  setup.sh
Week2/: CMakeLists.txt
gazebo_challenge/puzzlebot_gazebo/: CMakeLists.txt  package.xml
gazebo_challenge/puzzlebot_gazebo/launch/: gazebo_world.launch.py
launch/: puzzlebot_rviz.launch  puzzlebot_rviz.launch.py  puzzlebot_rviz_launch.py  rplidar.launch.py
localisation/: CMakeLists.txt
localisation/scripts/: bla.txt  joint_state_pub.py  localisation.py  pose_sim.py  velocity_control.py
localisation/urdf/: puzzlebot_jetson_ed_urdf.urdf
minichallenge5/minichallenge5/: CMakeLists.txt  package.xml
minichallenge5/minichallenge5/scripts/: bug0.py  bug2.py  localisation.py  scan_filter.py
minichallenge5/puzzlebot_gazebo/launch/: puzzlebot_gazebo.launch
puzzlebot_challenge/: JointStatePublisher.py  filter_scan.py  localisation.py  package.xml  pointcloud2_test.py  pose_sim.py  qr_identification.py  setup.cfg  setup.py  velocity_control.py
puzzlebot_challenge/launch/: offline_mapping.launch.py  puzzlebot_rviz.launch.py  rplidar.launch.py
puzzlebot_challenge/puzzlebot_challenge/: aruco_identification.py  bug.py  bug2 .py  bug2.py  corner_detection.py  filter_scan.py  goal_simulation.py  handle_object.py  image_stream.py  landmark_detection.py  localisation.py  mapping_corners.py  obstacule_sim.py  oval_pose_publisher.py  pose_sim.py  qr_identification.py  robot_control.py  tf_broadcaster.py  trajectory_control.py  trayectory_control.py  velocity_control.py
puzzlebot_challenge/urdf/: puzzlebot.urdf
puzzlebot_msgs/: CMakeLists.txt  package.xml
puzzlebot_msgs/msg/: ArucoArray.msg  Arucoinfo.msg  Landmark.msg  LandmarkList.msg  QRinfo.msg
puzzlebot_system/: camera.py  filter_scan.py
rviz/: manipulator.rviz
scripts/: camera_pub.py  pose_sim.py  velocity_control.py
urdf/: puzzlebot.urdf  puzzlebot_jetson_ed_urdf.urdf
